// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`build action > build 1`] = `
"
# cspell-tools: keep-case no-split

black
blue
cyan
green
magenta
orange
pink
purple
red
white
yellow
"
`;

exports[`build action > build 2`] = `
"
# cspell-tools: keep-case no-split

Amsterdam
Angeles
City
Delhi
Francisco
London
Los
Mexico
New
Paris
San
York
black
blue
cyan
green
magenta
orange
pink
purple
red
white
yellow
"
`;

exports[`build action > build multi 1`] = `
"
# cspell-tools: keep-case no-split

black
blue
cyan
green
magenta
orange
pink
purple
red
white
yellow
"
`;

exports[`build action > build multi 2`] = `
"
# cspell-tools: keep-case no-split

!Codemsg
!Errorerror
!codecode
!err
+code
+code+
+error
+error+
+msg
Café
Code
Code+
Error
Error+
msg
"
`;

exports[`build action > build multi 3`] = `
"
# cspell-tools: keep-case no-split

London
Los Angeles
Mexico City
New Amsterdam
New Delhi
New York
Paris
San Francisco
"
`;

exports[`build action > build multi 4`] = `
"
# cspell-tools: keep-case no-split

black
blue
cyan
green
magenta
orange
pink
purple
red
white
yellow
"
`;
